# canvas

./: .gitignore  Cargo.toml  README.md  build.sh  canister_ids.json  canvas_backend.did  dfx.json  foo.html  nft.old.did  package-lock.json  package.json  pnpm-lock.yaml  setup.sh  tsconfig.json  webpack.config.cjs  webpack.config.js
.netlify/: state.json
src/canvas/: main.mo
src/canvas_assets/assets/: main.css
src/canvas_assets/src/: App.tsx  Canvas.tsx  Canvases.tsx  Landing.tsx  LoginSection.tsx  Logo.tsx  NftPreview.tsx  PictureDrag.tsx  Submit.tsx  hooks.ts  index.html  index.js  index.ts  tiles.ts  utils.test.ts  utils.ts
src/canvas_backend/: Cargo.toml
src/canvas_backend/src/: api.rs  bootstrap.rs  canvas_backend.did  http_request.rs  lib.rs  router.rs  state.rs
src/declarations/canvas/: canvas.did  canvas.did.d.ts  canvas.did.js  index.js
src/declarations/canvas_assets/: index.d.ts  index.js
src/declarations/canvas_backend/: canvas_backend.did  canvas_backend.did.d.ts  canvas_backend.did.js  canvas_backend.wasm  index.d.ts  index.js
src/declarations/dialectic_nft/: dialectic_nft.did.js  index.js
src/dialectic_nft/: cargo.toml
src/minting/: dialectic.js  identity.js  nfts.json
