[package]
name = "canvas_backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.3.1"
ic-cdk-macros = "0.3.1"
image = "0.23.14"
serde = "1.0"
serde_bytes = "0.11"