[package]
name = "canvas_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
candid = "0.10.3"
ic-cdk = "0.12.1"
ic-stable-structures = "0.6.2"
image = "0.23.14"
serde = "1.0"
serde_bytes = "0.11"
