[package]
name = "canvas_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
candid = "0.9.6"
ic-cdk = "0.11.3"
ic-stable-structures = "0.6.2"
image = "0.23.14"
serde = { version = "1.0.192", features = ["derive"] }
serde_bytes = "0.11.12"
pluto = { git = "https://github.com/pu0238/pluto.git" }
serde_json = "1.0.114"


